--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
             </li>
         </ul>
     </div>
-
+    <div class="end-game-screen">
+        <div class="end-game-results">
+          <h1 class="congrats-message">Congrats!! You beat the game!</h1>
+          <button class="play-again" type="button">Play Again</button>
+        </div>
+      </div>
     <script src="js/app.js"></script>
 </body>
 </html>
